<?xml version="1.0"?>
<package format="2">
  <name>hamer</name>
  <version>1.0.0</version>
  <description>
    ROS packages for the hamer robot's (meta package)
  </description>
  <license>MIT</license>
 
  <maintainer email="akerdogmus@gmail.com">AKE</maintainer>
  <url type="repository">https://github.com/Akerdogmus/hamer</url>
  
  <author email="akerdogmus@gmail.com">AKE</author>
  <author>Alim Kerem ERDOGMUS</author>
  <author email="hcskn00@gmail.com">Harun COSKUN</author>
  <author email="enesyazz26@gmail.com">Enes YAZ</author>
  <author email="efecanberkayyasar@gmail.com">Efecan Berkay YASAR</author>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>hamer_description</exec_depend>
  <exec_depend>hamer_bringup</exec_depend>
  <exec_depend>hamer_simulation</exec_depend>
  <exec_depend>hamer_navigation</exec_depend>
  <exec_depend>hamer_slam</exec_depend>
  <exec_depend>hamer_teleop</exec_depend>
  <export><metapackage/></export>
</package>
