<?xml version="1.0"?>
<package format="2">
  <name>hamer_navigation</name>
  <version>1.0.0</version>
  <description>
    The hamer_navigation provides roslaunch scripts for starting the navigation.
  </description>
  <license>MIT</license>
  <maintainer email="akerdogmus@gmail.com">AKE</maintainer>
  
  <author email="akerdogmus@gmail.com">AKE</author>
  <author>Alim Kerem Erdogmus</author>
  <author email="kocamuha@gmail.com">Muhammed KOCAOGLU</author>
  <author email="enesyazz26@gmail.com">Enes YAZ</author>
  
  <url type="repository">https://github.com/Akerdogmus/hamer</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>follow_waypoints</exec_depend>
  <!--<exec_depend>hamer_bringup</exec_depend> -->
</package>
