<?xml version="1.0"?>
<package format="2">
  <name>hamer_simulation</name>
  <version>1.2.0</version>
  <description>
    Gazebo and RViz simulation/visualization package for the hamer.
  </description>
  <license>MIT</license>

  <author email="akerdogmus@gmail.com">AKE</author>
  <maintainer email="akerdogmus@gmail.com">AKE</maintainer>
  <url type="repository">https://github.com/Akerdogmus/hamer</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>
  <export></export>
</package>
