<?xml version="1.0"?>
<package format="2">
  <name>hamer_teleop</name>
  <version>1.0.0</version>
  <description>The hamer_teleop package. This package contains keyboard control codes developed for hamer.</description>

  <maintainer email="akerdogmus@gmail.com">AKE</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>

  </export>
</package>
